--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -24,8 +24,6 @@ parserOptions:
 settings:
   react:
     version: "detect"
-  import/resolver:
-    babel-module: {}
 
 plugins:
   - jest
@@ -34,6 +32,5 @@ plugins:
 rules: {
   "jest/expect-expect": "off",
   "no-console": "off",
-  "prettier/prettier": "error",
-  "import/prefer-default-export": 0
+  "prettier/prettier": "error"
 }
