--- a/package.json
+++ b/package.json
@@ -1,17 +1,46 @@
 {
   "name": "nextjs-with-apollo",
   "version": "0.0.1",
-  "main": "index.js",
   "repository": "https://github.com/ACloudGuru/nextjs-with-apollo",
   "author": "Subash Adhikari <me@subash.com.au>",
   "license": "MIT",
+  "main": "./lib",
+  "files": [
+    "lib"
+  ],
+  "scripts": {
+    "lint": "eslint src",
+    "build": "yarn lint && babel ./src --out-dir ./lib",
+    "prepublish": "yarn build",
+    "watch": "yarn build --watch"
+  },
   "devDependencies": {
+    "@babel/cli": "^7.7.0",
+    "@babel/core": "^7.7.2",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-react": "^7.7.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^23.0.4",
-    "eslint-plugin-react": "^7.16.0"
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.16.0",
+    "next": "^9.1.3",
+    "prettier": "^1.19.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
+  },
+  "peerDependencies": {
+    "next": "^9.1.3",
+    "prop-types": "^15.7.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
+  },
+  "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
+    "@apollo/react-ssr": "^3.1.3"
   }
 }
