--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   ],
   "scripts": {
     "lint": "eslint src",
-    "build": "yarn lint && babel ./src --out-dir ./lib",
-    "prepublish": "yarn build",
+    "test": "jest",
+    "build": "babel ./src --out-dir ./lib",
+    "prepublish": "yarn test && yarn lint && yarn build",
     "watch": "yarn build --watch"
   },
   "devDependencies": {
@@ -19,6 +20,7 @@
     "@babel/core": "^7.7.2",
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.7.0",
+    "apollo-client": "^2.6.4",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.0.1",
@@ -28,6 +30,8 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
+    "graphql": "^14.5.8",
+    "jest": "^24.9.0",
     "next": "^9.1.3",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
