--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint src",
     "test": "jest",
     "build": "babel ./src --out-dir ./lib",
-    "prepublish": "yarn test && yarn lint && yarn build",
+    "prepublish": "yarn lint && yarn build",
     "watch": "yarn build --watch"
   },
   "devDependencies": {
