--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "lint": "eslint src",
-    "test": "jest",
+    "test": "jest --coverage",
     "build": "babel ./src --out-dir ./lib",
     "watch": "yarn build --watch"
   },
@@ -45,5 +45,21 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
     "@apollo/react-ssr": "^3.1.3"
+  },
+  "jest": {
+    "testMatch": [
+      "**/?(*.)+(spec|test).js?(x)"
+    ],
+    "testPathIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 90,
+        "functions": 90,
+        "lines": 90,
+        "statements": 90
+      }
+    }
   }
 }
