--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,8 +10,10 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 10
-      - run: npm lint
-      - run: npm test
-      - run: npm build
+      - run: npm install -g yarn
+      - run: yarn install --pure-lockfile
+      - run: yarn lint
+      - run: yarn test
+      - run: yarn build
 
 
