--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
       - run: npm install -g yarn
       - run: yarn install --pure-lockfile
       - run: yarn lint
-      - run: yarn test
+      - run: yarn test --coverage
       - run: yarn build
 
 
