--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nextjs-with-apollo",
-  "version": "0.0.1",
-  "repository": "https://github.com/ACloudGuru/nextjs-with-apollo",
+  "version": "1.0.0",
+  "repository": "https://github.com/adikari/nextjs-with-apollo",
   "author": "Subash Adhikari <me@subash.com.au>",
   "license": "MIT",
   "main": "./lib",
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "lint": "eslint src",
-    "test": "jest --coverage",
+    "test": "echo todo",
     "build": "babel ./src --out-dir ./lib",
     "watch": "yarn build --watch"
   },
@@ -19,6 +19,8 @@
     "@babel/core": "^7.7.2",
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.7.0",
+    "@testing-library/react": "^9.3.2",
+    "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.6.0",
@@ -30,7 +32,6 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
     "graphql": "^14.5.8",
-    "jest": "^24.9.0",
     "next": "^9.1.3",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
@@ -45,21 +46,5 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
     "@apollo/react-ssr": "^3.1.3"
-  },
-  "jest": {
-    "testMatch": [
-      "**/?(*.)+(spec|test).js?(x)"
-    ],
-    "testPathIgnorePatterns": [
-      "/node_modules/"
-    ],
-    "coverageThreshold": {
-      "global": {
-        "branches": 90,
-        "functions": 90,
-        "lines": 90,
-        "statements": 90
-      }
-    }
   }
 }
